# industrial-data-platform

./: CLAUDE.md  README.md  pyproject.toml
.agents/skills/industrial-data-contracts/: SKILL.md
.agents/skills/platform-architecture-change/: SKILL.md
.github/workflows/: python-ci.yml
apps/edge_telemetry_agent/: README.md
apps/edge_telemetry_agent/docs/: data-contracts.md
apps/edge_telemetry_agent/src/edge_telemetry_agent/: cli.py
apps/edge_telemetry_agent/tests/: test_cli.py  test_runtime.py
apps/idp_config_registry/: README.md
apps/idp_config_registry/migrations/versions/: 0001_idp_config_registry_baseline.py
apps/idp_config_registry/tests/: test_api.py  test_backoffice.py
apps/knx_source_emulator/: AGENTS.md  README.md  pyproject.toml
apps/knx_source_emulator/src/knx_source_emulator/: __init__.py  __main__.py  cli.py  plan.py  runtime.py
apps/knx_source_emulator/tests/: test_cli.py  test_plan.py  test_runtime.py
arch/likec4/gateways/: gateways.c4
docs/agents/: README.md  module-map.yaml
docs/agents/plans/: grafana-customer-demo-plan.md
docs/architecture/: README.md  current-state.md  hierarchical-catalog-v1.md  open-questions.md  read-only-telemetry-api-discussion.md
docs/architecture/adrs/: ADR-015-hierarchical-catalog-runtime-boundary.md  README.md
docs/contracts/edge-telemetry-agent/: config-revision-model.md
infra/local/: README.md
libs/idp_synthetic_config/tests/: test_generator.py
tests/integration/: test_config_registry_kafka_publisher.py  test_config_registry_postgres.py  test_edge_agent_knx_to_mqtt.py
(+29 files in other folders)
