[project]
name = "knx-source-emulator"
version = "0.1.0"
description = "Local KNX-like southbound source emulator for synthetic Edge Telemetry Agent scenarios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "idp-synthetic-config",
]

[project.scripts]
knx-source-emulator = "knx_source_emulator.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

